text overflow bug fix

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html {
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 body {
